# Guard-CLI

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/tests/: fixture_scans.rs
docs/: checks.md  false-positives.md  integrations.md  json-schema.md
test-contracts/admin-event-safe/: Cargo.toml
test-contracts/admin-event-vulnerable/: Cargo.toml
test-contracts/auth-order-safe/: Cargo.toml
test-contracts/auth-order-vulnerable/: Cargo.toml
test-contracts/balance-safe/: Cargo.toml
test-contracts/balance-vulnerable/: Cargo.toml
test-contracts/contract-annotation-safe/: Cargo.toml
test-contracts/contract-annotation-vulnerable/: Cargo.toml
test-contracts/contract-deployment-safe/: Cargo.toml
test-contracts/contract-deployment-vulnerable/: Cargo.toml
test-contracts/delegate-safe/: Cargo.toml
test-contracts/delegate-vulnerable/: Cargo.toml
test-contracts/event-safe/: Cargo.toml
test-contracts/event-vulnerable/: Cargo.toml
test-contracts/input-length-safe/: Cargo.toml
test-contracts/input-length-vulnerable/: Cargo.toml
test-contracts/large-loop-safe/: Cargo.toml
test-contracts/large-loop-vulnerable/: Cargo.toml
test-contracts/nonce-safe/: Cargo.toml
test-contracts/nonce-vulnerable/: Cargo.toml
test-contracts/reinit-safe/: Cargo.toml
test-contracts/reinit-vulnerable/: Cargo.toml
test-contracts/token-amount-safe/: Cargo.toml
test-contracts/token-amount-vulnerable/: Cargo.toml
test-contracts/token-mint-safe/: Cargo.toml
(+74 files in other folders)
